--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -11,7 +11,7 @@ eureka:
     fetch-registry: false
     healthcheck:
       enabled: true
-    register-with-eureka: true
+    register-with-eureka: false
     serviceUrl:
       defaultZone: http://${DISCOVERY_SECURITY_USER_NAME:discovery}:${DISCOVERY_SECURITY_USER_PASSD:discovery}@${DISCOVERY_HOST:localhost}:${DISCOVERY_PORT:1801}/eureka/
   instance:
@@ -22,8 +22,6 @@ eureka:
     prefer-ip-address: true
     metadata-map:
       startup: ${random.int}
-      datacenter: xcan-dc1
-      environment: prod
   server:
     enable-self-preservation: true
     renewal-percent-threshold: 0.85
