--- a/src/main/scripts/Dockerfile
+++ b/src/main/scripts/Dockerfile
@@ -1,15 +1,4 @@
-#
-# Copyright (c) 2021   XCan Company
-#
-#        http://www.xcan.cloud
-#
-# Licensed under the XCBL(XCan Business License) Version 1.0.
-# Detail XCBL license at:
-#
-# http://www.xcan.cloud/licenses/XCBL-1.0
-#
-
-FROM openjdk:11.0.1-jre-slim-stretch
+FROM openjdk:17.0.2-jre
 
 MAINTAINER http://www.xcan.cloud
 
