Add banner configuration

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>cloud.xcan.angus</groupId>
+      <artifactId>xcan-infra.core</artifactId>
+      <version>${xcan-infra.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
